# ragtag_crew

./: .gitignore  AGENTS.md  README.md  TODO.md  docs_config.py  main.py  pyproject.toml
.github/instructions/: tools.instructions.md
.github/workflows/: claude-code-review.yml  gemini-dispatch.yml  gemini-invoke.yml  gemini-issue-fixer.yml  gemini-review.yml  gemini-scheduled-triage.yml  gemini-triage.yml
scripts/: __init__.py  db_create.py  doc_dwnld.py  docs_config.py  docs_config_data.yaml  ns_delete.py  split_text.py
tests/: __init__.py  conftest.py
tests/scripts/: __init__.py  test_doc_dwnld.py  test_docs_config.py  test_ns_delete.py  test_split_text.py
