[project]
name = "ragtag-crew"
version = "0.1.0"
description = "Tools for creating and maintaining vectordb lookups"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain-text-splitters>=0.3.11",
    "pinecone>=7.3.0",
    "pypdf>=6.1.1",
    "PyYAML>=6.0.3",
]

[dependency-groups]
dev = [
    "pyright>=1.1.406",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.0",
]

[tool.ruff]
line-length = 128
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203","D213"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
minversion = "8.4"
addopts = [
    "-ra",
    "--import-mode=importlib",
    "--strict-config",
    "--strict-markers",
    "--maxfail=1",
    "--ff",
]
